--- a/code/Idle_Factorio/wwwroot/index.html
+++ b/code/Idle_Factorio/wwwroot/index.html
@@ -9,6 +9,17 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/idle_factorio.css" rel="stylesheet" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CHCXW6JK85"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CHCXW6JK85');
+    </script>
+
 </head>
 
 <body>
